fix: do not display logo over button on small devices

--- a/src/app/pages/intro/intro.page.scss
+++ b/src/app/pages/intro/intro.page.scss
@@ -75,6 +75,12 @@ ion-slides {
         width: 150px;
       }
 
+      @media (max-height: 610px) {
+        img.bonjour-logo {
+          display: none;
+        }
+      }
+
       img.grow-logo {
         padding-top: 5vh;
       }
